--- a/settings.json
+++ b/settings.json
@@ -2,21 +2,21 @@
     "self_mode": false,
 	"autobio": false,
 	"antihidetag": true,
-	"user_register": false,
+	"user_register": true,
 	"anti_delete" : false,
 	"anticall": true,
 	"auto_welcome_msg": true,
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-	"ownername": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-	"botname":"Alphabot",
+	"ownerNumber": "628992029499",
+	"ownerNumberr": "628992029499",
+	"cr": "Cocopie",
+	"ownername": "Cocopie",
+	"botname":"CocoBotz",
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
 	"donasi":"donasi.jpg",
-	"fake": " 「  ALPHABOT  」\nCreated By ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×"
+	"fake": " 「  COCOBOTZ  」\nCreated By Cocopie"
 }
