--- a/settings.json
+++ b/settings.json
@@ -17,6 +17,6 @@
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"donasi":"donasi.jpg",
+	"donasi":"20220123_190659.jpg",
 	"fake": " 「  COCOBOTZ  」\nCreated By Cocopie"
 }
