--- a/settings.json
+++ b/settings.json
@@ -14,9 +14,9 @@
 	"cr": "Cocopie",
 	"ownername": "Cocopie",
 	"botname":"CocoBotz",
-	"thumb":"thumbnail_1.jpg",
-	"thumbnail":"thumbnail_2_1.jpg",
-	"fakethumb":"thumbnail_1.jpg", 
+	"thumb":"images (27).jpeg",
+	"thumbnail":"images (27).jpeg",
+	"fakethumb":"images (27).jpeg", 
 	"donasi":"20220123_190659.jpg",
 	"fake": " 「  COCOBOTZ  」\nCreated By Cocopie"
 }
