--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
     "self_mode": false,
 	"autobio": false,
 	"antihidetag": true,
-	"user_register": true,
+	"user_register": false,
 	"anti_delete" : false,
 	"anticall": true,
 	"auto_welcome_msg": true,
@@ -14,9 +14,9 @@
 	"cr": "Cocopie",
 	"ownername": "Cocopie",
 	"botname":"CocoBotz",
-	"thumb":"images (27).jpeg",
-	"thumbnail":"images (27).jpeg",
-	"fakethumb":"images (27).jpeg", 
+	"thumb":"IMG-20220127-WA0069.jpg",
+	"thumbnail":"IMG-20220127-WA0069.jpg",
+	"fakethumb":"IMG-20220127-WA0069.jpg", 
 	"donasi":"20220123_190659.jpg",
-	"fake": " 「  COCOBOTZ  」\nCreated By Cocopie"
+	"fake": " 「  CocoBotz  」\nCreated By Cocopie"
 }
