--- a/settings.json
+++ b/settings.json
@@ -15,7 +15,7 @@
 	"ownername": "Cocopie",
 	"botname":"CocoBotz",
 	"thumb":"IMG-20220127-WA0069.jpg",
-	"thumbnail":"IMG-20220127-WA0069.jpg",
+	"thumbnail":"20220201_200948.jpg",
 	"fakethumb":"IMG-20220127-WA0069.jpg", 
 	"donasi":"20220123_190659.jpg",
 	"fake": " 「  CocoBotz  」\nCreated By Cocopie"
